--- a/index.html
+++ b/index.html
@@ -13,12 +13,32 @@
 		});
 	 });
 </script>
+
+<script>
+	function Person(theName,theAge){
+	this.name = theName; //public variable
+	this.age = theAge;
+	this.eat = function(){
+		console.log(this.name + " is eating");
+	}	
+}
+</script>
 </head>
 
 <body>
 
+<script>
+	Ext.onReady(function() {
+		Ext.Msg.alert("THis is a message.");
+	});
+</script>
 <p>&nbsp;</p>
 <hr>
-
+<script>
+	var p1 = new Person("Sam",23);
+	p1.eat(); //Prints Sam is eating
+	console.log(p1.age); // Prints 23
+	
+</script>
 </body>
 </html>
